--- a/.gitignore
+++ b/.gitignore
@@ -178,6 +178,7 @@ publish/
 PublishScripts/
 
 # NuGet Packages
+nupkg/
 *.nupkg
 # The packages folder can be ignored because of Package Restore
 **/[Pp]ackages/*
