--- a/source/NuLink.Cli/NuLink.Cli.csproj
+++ b/source/NuLink.Cli/NuLink.Cli.csproj
@@ -9,7 +9,8 @@
         <Version>0.1.0-beta2</Version>
         <RepositoryUrl>https://github.com/nwheels-io/NuLink</RepositoryUrl>
         <PackageProjectUrl>https://nwheels-io.github.io/NuLink/</PackageProjectUrl>
-        <PackageLicenseUrl>https://github.com/nwheels-io/NuLink/blob/master/LICENSE</PackageLicenseUrl>
+        <PackageLicenseExpression>MIT</PackageLicenseExpression>
+        <PackageOutputPath>./nupkg</PackageOutputPath>
         <Description>The missing LINK feature of NuGet: develop &amp; test packages as if they were part of the main project</Description>
         <Authors>Felix Berman</Authors>
         <PackAsTool>true</PackAsTool>
@@ -17,6 +18,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="ByteDev.Nuget.Nuspec" Version="1.0.1" />
       <PackageReference Include="System.CommandLine.Experimental" Version="0.2.0-alpha.19174.3" />
       <PackageReference Include="Buildalyzer" Version="2.2.0" />
       <PackageReference Include="Murphy.SymbolicLink" Version="1.0.0" />  
